Statistics dashboard partially implemented

--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -31,13 +31,13 @@
                     <div class="collapse" id="navbar-dashboards">
                         <ul class="nav nav-sm flex-column">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="/" class="nav-link">
                                 <span class="sidenav-mini-icon"> S </span>
                                 <span class="sidenav-normal"> Statistiques </span>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/" class="nav-link">
+                                <a href="{% url 'home:graphs' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> G </span>
                                 <span class="sidenav-normal"> Graphes </span>
                                 </a>
