--- a/apps/templates/home/graphs.html
+++ b/apps/templates/home/graphs.html
@@ -23,8 +23,8 @@
             </nav>
           </div>
           <div class="col-lg-6 col-5 text-right">
-            <a href="#" class="btn btn-sm btn-neutral">New</a>
-            <a href="#" class="btn btn-sm btn-neutral">Filters</a>
+            <a href="#" class="btn btn-sm btn-neutral" data-id="a-graphes-new">New</a>
+            <a href="#" class="btn btn-sm btn-neutral" data-id="a-graphes-filters">Filters</a>
           </div>
         </div>
         <!-- Card stats -->
