--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="sidenav-collapse-main">
             <!-- Nav items -->
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" data-id="m-dashboards">
                     <a class="nav-link {% if 'index' in segment %} active {% endif %}" 
                     href="#navbar-dashboards" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="navbar-dashboards">
                         <i class="ni ni-shop text-primary"></i>
@@ -30,13 +30,13 @@
                     </a>
                     <div class="collapse" id="navbar-dashboards">
                         <ul class="nav nav-sm flex-column">
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-statistiques">
                                 <a href="/" class="nav-link">
                                 <span class="sidenav-mini-icon"> S </span>
                                 <span class="sidenav-normal"> Statistiques </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-graphes">
                                 <a href="{% url 'home:graphs' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> G </span>
                                 <span class="sidenav-normal"> Graphes </span>
@@ -46,21 +46,21 @@
                     </div>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item" data-id="m-enrollements">
                     <a class="nav-link {% if 'enrollement' in segment %} active {% endif %}" 
                     href="#navbar-enrollement" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="navbar-enrollement">
                         <i class="ni ni-collection text-success"></i>
-                        <span class="nav-link-text">Enrollement</span>
+                        <span class="nav-link-text">Enrollements</span>
                     </a>
                     <div class="collapse" id="navbar-enrollement">
                         <ul class="nav nav-sm flex-column">
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-liste-enrollement">
                                 <a href="#" class="nav-link">
                                 <span class="sidenav-mini-icon"> LE </span>
                                 <span class="sidenav-normal"> Liste </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-etats-enrollement">
                                 <a href="#" class="nav-link">
                                 <span class="sidenav-mini-icon"> EE </span>
                                 <span class="sidenav-normal"> Etats </span>
@@ -70,7 +70,7 @@
                     </div>
                 </li>
                 
-                <li class="nav-item">
+                <li class="nav-item" data-id="m-facturation">
                     <a class="nav-link {% if 'facturation' in segment %} active {% endif %}" 
                     href="#navbar-facturation" data-toggle="collapse" role="button" aria-expanded="{% if 'facturation' in segment %} true {% else %} false {% endif %}" aria-controls="navbar-facturation">
                         <i class="ni ni-ui-04 text-info"></i>
@@ -78,13 +78,13 @@
                     </a>
                     <div class="collapse" id="navbar-facturation">
                         <ul class="nav nav-sm flex-column">
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-declarations">
                                 <a href="{% url 'paiement:declarations' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> D </span>
                                 <span class="sidenav-normal"> Déclarations </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-factures">
                                 <a href="{% url 'paiement:factures' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> F </span>
                                 <span class="sidenav-normal"> Factures </span>
@@ -99,7 +99,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" data-id="m-paiements">
                     <a class="nav-link {% if 'paiements' in segment %} active {% endif %}" 
                        href="#navbar-paiements" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="navbar-paiements">
                         <i class="ni ni-credit-card text-orange"></i>
@@ -107,19 +107,19 @@
                     </a>
                     <div class="collapse" id="navbar-paiements">
                         <ul class="nav nav-sm flex-column">
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-liste-paiements">
                                 <a href="{% url 'paiement:payments' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> L </span>
                                 <span class="sidenav-normal"> Liste </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-devises">
                                 <a href="{% url 'paiement:devises' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> D </span>
                                 <span class="sidenav-normal"> Dévises </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-etats">
                                 <a href="#" class="nav-link">
                                 <span class="sidenav-mini-icon"> E </span>
                                 <span class="sidenav-normal"> Etats </span>
@@ -128,7 +128,7 @@
                         </ul>
                     </div>
                     </li>
-                <li class="nav-item">
+                <li class="nav-item" data-id="m-administration">
                     <a class="nav-link {% if 'administration' in segment %} active {% endif %}" 
                     href="#navbar-administration" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="navbar-administration">
                         <i class="ni ni-settings text-pink"></i>
@@ -136,25 +136,25 @@
                     </a>
                     <div class="collapse" id="navbar-administration">
                         <ul class="nav nav-sm flex-column">
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">
+                            <li class="nav-item" data-id="sm-permissions">
+                                <a href="{% url 'authentication:permissions' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> PM </span>
                                 <span class="sidenav-normal"> Permissions </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-utilisateurs">
                                 <a href="{% url 'authentication:users' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> U </span>
                                 <span class="sidenav-normal"> Utilisateurs </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-profiles">
                                 <a href="{% url 'authentication:profiles' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> P </span>
                                 <span class="sidenav-normal"> Profils </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" data-id="sm-agences">
                                 <a href="{% url 'authentication:agencies' %}" class="nav-link">
                                 <span class="sidenav-mini-icon"> A </span>
                                 <span class="sidenav-normal"> Agences </span>
