--- a/apps/templates/paiements/devises.html
+++ b/apps/templates/paiements/devises.html
@@ -23,7 +23,7 @@
             </nav>
           </div>
           <div class="col-lg-6 col-5 text-right">
-            <a href="#" class="btn btn-sm btn-neutral">Filters</a>
+            <a href="#" class="btn btn-sm btn-neutral" data-id="a-devises-filters">Filters</a>
           </div>
         </div>
         
@@ -63,7 +63,7 @@
               <!-- Card header -->
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des dévises</em>
-                  <a href="#" class="btn btn-sm btn-neutral float-right" role="button" data-toggle="modal" data-target="#modal-devise-update">Actualiser</a>
+                  <a href="#" class="btn btn-sm btn-neutral float-right" role="button" data-id="a-devises-actualiser" data-toggle="modal" data-target="#modal-devise-update">Actualiser</a>
                 </h3>
                 
                 <div class="modal fade" id="modal-devise-update" tabindex="-1" role="dialog" aria-labelledby="modal-devise-update" aria-hidden="true">
